Fixed nav bar + aligned twitter widget

--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,8 @@ h1{
 	font-style: italic;
 	color: #E6E6E6;
 	font-weight: 400;
+	line-height: 50px;
 	margin: 0;
-	margin-bottom: 5px;
 }
 h2{
 	font-size: 1.4em;
